<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="viewModel"
            type="com.example.onixloginhomework.fragments.questiontest.three.QuestionThreeTestViewModel" />
        <variable
            name="model"
            type="com.example.onixloginhomework.fragments.questiontest.three.QuestionThreeTestModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.core.widget.NestedScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/textViewFour"
                    android:gravity="center"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/fragment_question_three_title_one"
                    android:textSize="@dimen/text_30"
                    android:textColor="@color/black"/>

                <RadioGroup
                    android:id="@+id/radioGroupOne"

                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content">

                    <RadioButton
                        android:onClick="@{() -> viewModel.onAnswerFalse()}"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/fragment_question_three_answer_one_title_one"
                        android:textSize="@dimen/text_20" />

                    <RadioButton
                        android:onClick="@{() -> viewModel.onAnswerFalse()}"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/fragment_question_three_answer_two_title_one"
                        android:textSize="@dimen/text_20" />

                    <RadioButton
                        android:onClick="@{() -> viewModel.onAnswerTrue()}"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/fragment_question_three_answer_three_title_one"
                        android:textSize="@dimen/text_20" />
                </RadioGroup>
                <TextView
                    android:text="@string/fragment_question_three_title_two"
                    android:gravity="center"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:textSize="@dimen/text_30"
                    android:textColor="@color/black"/>
                <ImageView
                    android:id="@+id/imageViewEight"
                    android:layout_width="@dimen/dimen_300"
                    android:layout_height="@dimen/dimen_220"
                    tools:src="@tools:sample/avatars"/>
                <EditText
                    android:singleLine="true"
                    android:text="@={model.editTextOneTestViewModel}"
                    android:id="@+id/editTextOne"
                    android:hint="@string/input_answer"
                    android:gravity="center"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"/>
                <Button
                    android:onClick="@{() -> viewModel.buttonOne()}"
                    android:text="@string/confirm_answer"
                    android:layout_width="@dimen/dimen_220"
                    android:layout_height="match_parent"/>
                <TextView
                    android:text="@string/fragment_question_three_title_three"
                    android:gravity="center"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:textSize="@dimen/text_30"
                    android:textColor="@color/black"/>
                <ImageView
                    android:id="@+id/imageViewTen"
                    android:layout_width="@dimen/dimen_300"
                    android:layout_height="@dimen/dimen_220"
                    tools:src="@tools:sample/avatars"/>
                <EditText
                    android:text="@={model.editTextTwoTestViewModel}"
                    android:id="@+id/editTextTwo"
                    android:hint="@string/input_answer"
                    android:singleLine="true"
                    android:gravity="center"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"/>
                <Button
                    android:onClick="@{() -> viewModel.buttonTwo()}"
                    android:text="@string/confirm_answer"
                    android:layout_width="@dimen/dimen_220"
                    android:layout_height="match_parent"/>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="start">
                    <Button
                        android:id="@+id/buttonBackTwo"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:visibility="visible"
                        android:onClick="@{() -> viewModel.onBackClick()}"
                        android:text="@string/back" />
                    <Button
                        android:id="@+id/buttonNextThree"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:onClick="@{() -> viewModel.onNextClick()}"
                        android:layout_marginStart="@dimen/dimen_100"
                        android:text="@string/next" />
                </LinearLayout>
            </LinearLayout>
        </androidx.core.widget.NestedScrollView>

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>